app/assets/stylesheets/base/layout.scss
/* layout */

html, body {
  height: 100%;
}

header {
  // flex: 0 1 auto;
}

body {
  background: $background;
}

.container {
  height: 100%;
  width: 100%;
}

.body { 
  overflow-y: auto; 
  height: calc(100% - #{$header-height + $border-width*2 + $baseline*2});
  // height: calc(100% - #{$baseline*3 - $h1-lineheight});
  padding-bottom: $baseline;
}

.header h1 {
  padding-top: 0;
}

.main {
  background: $white;
  display: flex;
  height: 100%;
  // height: calc(100% - #{$header-height + $border-width*2});
  // height: calc(100% - #{$baseline*3 - $h1-lineheight});
  z-index: 0;
  &.cover {
    position: absolute;
    top: 0;
    height: calc(100%);
    padding-top: 0;
    // margin-bottom: 0;
    .card.profile {
      padding-top: 0;
    }
  }
  .form {
    margin-top: 0;
    margin-bottom: 0;
  }
  &.brand {
    background: $brand;
  }
}

.card {
  margin: $baseline*0.5 0;
}

.slide {
  margin: 0;
}

.key.card.divide {
  padding: $baseline 0;
}

.divide {
  border-bottom: $border-width-thin $border-style $black;
  padding: $baseline*0.5 0;
}

.fa-clock-o {
  margin-top: $baseline;
  text-align: center;
  width: 100%;
}

.actions {
  margin-top: 0;
  margin-bottom: $baseline*0.5;
  &.double {
    margin-top: -$baseline*2 - $border-width*2 - $baseline*0.5;
  }
  &.secondary {
    display: flex;
    // position: fixed;
    // bottom: 0;
  }
  .secondary {
    flex: 1 1 100%;
  }
}

.body .actions {
  position: relative;
  margin-top: $baseline;
}

.body .actions + .actions {
  margin-top: 0;
}

.choice {
  margin-top: $baseline*0.5;
  margin-bottom: $baseline*0.5;
}

.map {
  height: $baseline*4;
  overflow: hidden;
  width: 100%;
  margin-left: 0;
}

.tags {
  margin-top: 0;
  margin-bottom: 0;
}

.profile {
  h2, p {
    margin-bottom: 0;
  }
  h2 {
    color: $primary;
  }
}

.listing .right {
  float: right;
}

.profile-card .profile {
  margin-bottom: $baseline*0.25;
}

